--- a/app/sass/media.scss
+++ b/app/sass/media.scss
@@ -696,7 +696,7 @@
 
   /* Hover slider scale links */
 
-  
+
 }
 
 @media (max-width: 670px) {
@@ -1343,6 +1343,10 @@
 
   .services-btn {
     padding: 3px 10px;
+    &:hover {
+      background-color: $darkblue;
+      color: $white;
+    }
   }
 
   /* Team */
@@ -1405,6 +1409,9 @@
   .gallery__item-link {
     padding: 25px;
     padding-bottom: 20px;
+    &:hover {
+      transform: scale(1, 1);
+    }
   }
 
   .gallery__item-pic {
@@ -1420,6 +1427,10 @@
   .gallery__item-btn {
     font-size: 22px;
     padding: 5px 10px;
+    &:hover {
+      background-color: $darkblue;
+      color: $white;
+    }
   }
 
   .gallery {
@@ -1537,6 +1548,18 @@
   .services__link {
     padding: 25px;
     padding-bottom: 20px;
+    &:hover {
+      transform: scale(1);
+      .services__title {
+        color: $black;
+        text-decoration: none;
+      }
+      .services__btn {
+        border-color: transparent;
+        background-color: $darkblue;
+        color: $white;
+      }
+    }
   }
 
   .services__title {
@@ -1570,6 +1593,18 @@
 
   .category__link {
     padding: 25px;
+    &:hover {
+      transform: scale(1);
+      .category__title {
+        text-decoration: none;
+        color: $black;
+      }
+      .category__btn {
+        border-color: transparent;
+        background-color: $darkblue;
+        color: $white;
+      }
+    }
   }
 
   .category__pic {
@@ -1770,6 +1805,9 @@
   .reg__btn {
     font-size: 22px;
     padding: 7px 30px;
+    &:hover {
+      background-color: $darkblue;
+    }
   }
 
 }
